apps/nginx-phpfpm/nginx.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nginx
  namespace: app1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app1
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: pblaas/nginx-app1:latest
        resources:
          requests:
            cpu: "30m"
            memory: "15Mi"
          limits:
            cpu: "40m"
            memory: "25Mi"
        ports:
        - containerPort: 80
