apps/nginx-phpfpm/nginx.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  namespace: app1
spec:
  selector:
   app: app1
   tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
