apps/nginx-phpfpm/nginx.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: nginx-ingress
 namespace: app1
spec:
 rules:
   - host: nginxphpfpm.k8s.domain.ltd
     http:
       paths:
         - path: /
           backend:
             serviceName: nginx
             servicePort: 80
